--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  image_picker: ^0.6.3+1
+  intl: 0.15.7
+
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
