--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
     sdk: flutter
   image_picker: ^0.6.3+1
   intl: 0.15.7
+  country_code_picker: ^1.2.3
+  http: ^0.12.0+1
+  location: ^2.0.0
 
 
 
@@ -47,6 +50,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/logo.png
+    - assets/bill_gate.jpg
+    - assets/dashboard.png
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
