--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   http: ^0.12.0+1
   location: ^2.0.0
   scoped_model: ^1.0.1
+  shared_preferences: ^0.5.6+1
+  rxdart: ^0.23.1
 
 
 
