--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   scoped_model: ^1.0.1
   shared_preferences: ^0.5.3+1
   rxdart: ^0.23.1
+  flutter_verification_code: ^0.1.5
+
 
 
 
