--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,8 @@ flutter:
     - assets/letter.png
     - assets/gmail.png
     - assets/profile.png
+    - assets/chat.jpg
+    - assets/loupe.jpg
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
