--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,7 +72,7 @@ flutter:
     - assets/profile.png
     - assets/chat.jpg
     - assets/loupe.jpg
-  #  - images/a_dot_ham.jpeg
+    - assets/sun.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
