tickets, show articles and details features add

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   rxdart: ^0.23.1
   pin_entry_text_field: ^0.1.4
   flutter_launcher_icons: "^0.7.3"
+  firebase_messaging: ^6.0.9
+  dio: ^3.0.9
+
 
 
 
@@ -75,6 +78,9 @@ flutter:
     - assets/loupe.jpg
     - assets/sun.jpeg
     - assets/splash.png
+    - assets/art.png
+    - assets/cancer.jpg
+    - assets/cancer2.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
