--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter_launcher_icons: "^0.7.3"
   dio: ^3.0.9
   flutter_webview_plugin: ^0.3.10+1
+  braintree_payment: ^1.2.3
+
 
 
 
