--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,13 @@ dependencies:
   cached_network_image: ^2.0.0
   bubble: ^1.1.9+1
   fancy_shimmer_image: ^1.0.0+1
+  flutter_mailer: ^0.4.2
+  path_provider: ^1.6.5
+  camera_camera: ^1.0.31
+  torch: ^0.1.1
+
+
+
 
 
 
