--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_mailer: ^0.4.2
   path_provider: ^1.6.5
   flutter_local_notifications: ^0.6.0
+  url_launcher: ^5.4.2
 
 
 
