--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   flutter_local_notifications: ^0.6.0
   url_launcher: ^5.4.2
   rate_my_app: ^0.6.0+2
+  camera_camera: ^1.0.31
+
 
 
 
